[workspace]
resolver = "3"
members = ["mtorrent", "mtorrent-core", "mtorrent-dht", "mtorrent-utils"]

[workspace.package]
version = "0.3.2"
edition = "2024"
authors = ["Mikhail Vasilyev <mikail.vasilyev@gmail.com>"]
repository = "https://github.com/DanglingPointer/mtorrent"
license = "Apache-2.0"

[profile.dev]
opt-level = 3

[workspace.dependencies]
url = "2.5.7"
futures-util = { version = "0.3", default-features = false }
futures-channel = { version = "0.3", default-features = false }
rand = { version = "0.9", default-features = false, features = ["thread_rng"] }
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
log = "0.4.27"
simple_logger = { version = "5.0.0", features = ["threads"] }
sha1_smol = "1.0.1"
bytes = "1.10.1"
tokio = { version = "1.45.1", features = [
    "rt",
    "net",
    "time",
    "io-util",
    "sync",
    "macros",
] }
tokio-util = "0.7.15"
derive_more = { version = "2.0.1", features = ["from", "display", "debug"] }
local_async_utils = { version = "0.2.2", features = ["tokio-time"] }
thiserror = "2.0.16"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
static_assertions = "1.1.0"
tokio-test = "0.4.4"
mockito = { version = "1.7.0", default-features = false }
