[package]
name = "mtorrent-core"
version = "0.3.1"
edition = "2024"


[features]
default = []
mocks = []

[dependencies]
mtorrent-utils = { path = "../mtorrent-utils" }
futures-channel = { workspace = true }
futures-util = { workspace = true }
local_async_utils = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
bitvec = { workspace = true }
derive_more = { workspace = true }
bytes = { workspace = true }
sha1_smol = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
url = { workspace = true }
reqwest = { version = "0.12.22", features = ["gzip"] }
form_urlencoded = { version = "1.2.1", default-features = false }

[dev-dependencies]
tokio-test = { workspace = true }
