[package]
name = "mtorrent-core"
description = "Fundamentals for building asynchronous BitTorrent clients"
categories = ["asynchronous", "network-programming", "parser-implementations"]
keywords = ["bittorrent", "torrent", "protocol", "tracker", "p2p"]
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = []
mocks = []

[dependencies]
mtorrent-utils = { workspace = true }
futures-channel = { workspace = true }
futures-util = { workspace = true }
local_async_utils = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
log = { workspace = true }
bitvec = { workspace = true }
derive_more = { workspace = true }
serde = { workspace = true }
bytes = { workspace = true }
sha1_smol = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
url = { workspace = true }
reqwest = { version = "0.12.22", features = ["gzip"] }
form_urlencoded = { version = "1.2.1", default-features = false }

[dev-dependencies]
tokio-test = { workspace = true }
mockito = { workspace = true }
