[package]
name = "mtorrent-dht"
description = "Asynchronous implementation of Distributed Hash Table (DHT) for the BitTorrent protocol"
categories = [
    "asynchronous",
    "data-structures",
    "network-programming",
    "parser-implementations",
]
keywords = ["bittorrent", "torrent", "dht", "kademlia", "hash"]
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
mtorrent-utils = { workspace = true }
derive_more = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
bitvec = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
local_async_utils = { workspace = true }
sha1_smol = { workspace = true }
pinned-init = { version = "0.0.10", default-features = false, features = [
    "std",
] }

[dev-dependencies]
simple_logger = { workspace = true }
tokio-test = { workspace = true }
