[package]
name = "mtorrent-utils"
description = "Miscellaneous utilities for BitTorrent protocol"
categories = [
    "asynchronous",
    "data-structures",
    "network-programming",
    "parser-implementations",
]
keywords = ["bittorrent", "torrent", "bencode", "bencoding"]
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
derive_more = { workspace = true }
thiserror = { workspace = true }
local_async_utils = { workspace = true }
bytes = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
igd-next = { version = "0.16.1", features = ["aio_tokio"] }

[target.'cfg(target_family = "windows")'.dependencies]
ipconfig = "0.3.2"

[dev-dependencies]
static_assertions = { workspace = true }
tokio-test = { workspace = true }
simple_logger = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
workspace = true

[features]
tokio_unstable=[]