[package]
name = "mtorrent"
description = "CLI BitTorrent client based on Tokio"
categories = [
    "asynchronous",
    "network-programming",
    "command-line-utilities",
    "security",
]
keywords = ["bittorrent", "torrent", "client", "p2p", "protocol"]
exclude = ["/tests/"]
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
mtorrent-core = { path = "../mtorrent-core" }
mtorrent-dht = { path = "../mtorrent-dht" }
mtorrent-utils = { path = "../mtorrent-utils" }
tokio = { workspace = true }
log = { workspace = true }
futures-util = { workspace = true }
local_async_utils = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
derive_more = { workspace = true }
simple_logger = { workspace = true }
sha1_smol = { workspace = true }
clap = { version = "4.5.40", features = ["derive"] }

[dev-dependencies]
tokio-test = { workspace = true }
simple_logger = { workspace = true }
mockito = { workspace = true }
mtorrent-core = { path = "../mtorrent-core", features = ["mocks"] }
