[package]
name = "mtorrent"
description = "Fast and lightweight BitTorrent client in Rust"
categories = ["asynchronous", "network-programming", "security"]
keywords = ["bittorrent", "torrent", "client", "p2p", "protocol"]
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
mtorrent-core = { workspace = true }
mtorrent-dht = { workspace = true }
mtorrent-utils = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
futures-util = { workspace = true }
local_async_utils = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
derive_more = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
simple_logger = { workspace = true }
mockall = { workspace = true }
rstest = { workspace = true }
rstest_reuse = { workspace = true }
mtorrent-core = { path = "../mtorrent-core", features = ["mocks"] }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--cfg", "tokio_unstable"]
rustc-args = ["--cfg", "tokio_unstable"]
